# rtfetch

./: Cargo.toml  Fetch.toml  README.md  build.rs  config.toml
src/: build.rs  main.rs
src/assets/: arch.logo  arch_thick.logo
