[package]
name = "rfetch"
version = "0.1.0"
edition = "2021"
build = "./src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
toml = "0.5"
serde_derive = "1.0"
serde = "1.0.97"

[dependencies]
color-print = "0.3.2"
sysinfo = "0.23.11"